infra-definitions/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caption-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-websockets: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8000

          - path: /api/v1/upload
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8000

          - path: /api/v1/caption
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8000

          - path: /ws/socket.io
            pathType: ImplementationSpecific  # <--- FIXED HERE
            backend:
              service:
                name: caption-service
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
